<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/opt_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/opt_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/opt_settings_text"/>
    <item
        android:id="@+id/opt_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/opt_info_text"/>
    <item
        android:id="@+id/opt_cartoni"
        android:icon="@android:drawable/ic_menu_upload_you_tube"
        android:title="@string/opt_cartoni_text"/>

    <!--<item
        android:id="@+id/opt_rate"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/opt_rate_text"/>
    <item
        android:id="@+id/opt_premium"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/opt_premium_text"/>-->
        
</menu>